pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  containers:
  - name: aspnetapp
    image: aspnetapp
    imagePullPolicy: Never
    ports:
      - protocol: TCP
        containerPort: 80
        name: first
      - protocol: TCP
        containerPort: 443
        name: second
