service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp3
spec:
  selector:
    app: aspnetapp3
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
