service-extname.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
    type: ExternalName
    externalName: neverssl.com
