service-nodeport2.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp3
spec:
  selector:
    app: aspnetapp3
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
