service-nodeport3.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp4
spec:
  selector:
    app: aspnetapp4
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
