service3.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
    type: ExternalName
    externalName: http://shaurman.com.ua/
